--- a/index.html
+++ b/index.html
@@ -22,31 +22,21 @@
     <div class="background-image">
         <div id="hero-text">
             <h1>SneakySquid</h1>
-        </div>
 
-        <div class="scroll-down">
-            <a href="#content">
-                <i class="fas fa-chevron-down"></i> Scroll Down
-            </a>
-        </div>
-    </div>
-
-    <div id="content">
-        <div id="navbar">
             <a href="mailto:sne@kysqu.id">
-                <i class="fas fa-envelope"></i> Email
+                <i class="fas fa-envelope"></i>
             </a>
 
             <a href="https://github.com/SneakySquid">
-                <i class="fab fa-github"></i> GitHub
+                <i class="fab fa-github"></i>
             </a>
 
             <a href="https://discord.gg/XpqJ5bz">
-                <i class="fab fa-discord"></i> Discord
+                <i class="fab fa-discord"></i>
             </a>
 
             <a href="https://steamcommunity.com/id/SneakySqwuid/">
-                <i class="fab fa-steam-square"></i> Steam
+                <i class="fab fa-steam-square"></i>
             </a>
         </div>
     </div>
