Revert changes to index

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         <div id="hero-text">
             <h1>SneakySquid</h1>
 
-            <p href="mailto:sne@kysqu.id">
+            <a href="mailto:sne@kysqu.id">
                 <i class="fas fa-envelope"></i>
-            </p>
+            </a>
 
-            <p href="https://github.com/SneakySquid">
+            <a href="https://github.com/SneakySquid">
                 <i class="fab fa-github"></i>
-            </p>
+            </a>
 
-            <p href="https://discord.gg/XpqJ5bz">
+            <a href="https://discord.gg/XpqJ5bz">
                 <i class="fab fa-discord"></i>
-            </p>
+            </a>
 
-            <p href="https://steamcommunity.com/id/SneakySqwuid/">
+            <a href="https://steamcommunity.com/id/SneakySqwuid/">
                 <i class="fab fa-steam-square"></i>
-            </p>
+            </a>
         </div>
     </div>
 </body>
