--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="icon" type="image/png" href="/assets/squids/sneaky.png">
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="sneakysqu.id" />
 	<meta property="og:type" content="website" />
