Make icons more consistent

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			<h1>SneakySquid</h1>
 
 			<a href="mailto:sne@kysqu.id">
-				<i class="fas fa-envelope"></i>
+				<i class="fas fa-envelope-square"></i>
 			</a>
 
 			<a href="https://github.com/SneakySquid">
-				<i class="fab fa-github"></i>
+				<i class="fab fa-github-square"></i>
 			</a>
 
 			<a href="https://discord.gg/XpqJ5bz">
